Changed the encoding of README to utf-8

--- a/README
+++ b/README
@@ -1,24 +1,24 @@
 ===========================================
- SL: $B%-!<%?%$%W6:@5%=%U%H(B Mac OS X version
+ SL: キータイプ矯正ソフト Mac OS X version
 	Copyright 1993,1998 Toyoda Masashi
 		(toyoda@is.titech.ac.jp)
 	Copyright 2003-2011 KITADAI Yukinori
 		(algebraicallyClosedField@gmail.com)
 ===========================================
 
-$B$`$+$7$K$bEj9F$5$l$?>iCL%=%U%H$N(B sl $B$N9k2ZHG$G$9!#(B
-$B%"%$%G%"$O<Z$jJ*$G$9$,!"%W%m%0%i%`<+BN$O;d$N%*%j%8%J%k$G$9!#(B
-a,l,F $B%*%W%7%g%s$,M-8z$G$9!#5!G=$O<B9T$7$F3N$+$a$F$/$@$5$$!#(B
-make $B$9$l$P$G$-$"$,$j$^$9!#(B
+むかしにも投稿された冗談ソフトの sl の豪華版です。
+アイデアは借り物ですが、プログラム自体は私のオリジナルです。
+a,l,F オプションが有効です。機能は実行して確かめてください。
+make すればできあがります。
 
 
 ---
-Mac OS X version $BMQ(B $BDI5-(B
+Mac OS X version 用 追記
 
-$BK-ED$5$s$,:n$i$l$?$b$N$r2~B$$7$^$7$?!#5!G=$O<B9T$7$F3N$+$a$F$/$@$5$$!#(B
-$B$d$O$j(B make $B$9$l$P$G$-$"$,$j$^$9!#(B
-$B$d$O$j$3$N(B sl $B$b(B root $B$G(B /bin $B$J$I$K%3%T!<$9$k$N$,$$$$$H;W$$$^$9!#(B
+豊田さんが作られたものを改造しました。機能は実行して確かめてください。
+やはり make すればできあがります。
+やはりこの sl も root で /bin などにコピーするのがいいと思います。
 
-$BKLgJG!K!(B
+北臺如法
 
 
